# Simulation-trajectoire

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  REVIEW.md  main.py  pyproject.toml  pyrightconfig.json  recording.sh  requirements.txt  run_all.sh  run_qt.py
.github/: copilot-instructions.md
data/: VERIFICATION_REPORT.md  sim_to_real_presets.npz  synthetic_data.npz  test_synthetic_data.npz  tracking_data.csv
doc/report/: bibliography.bib  report.bbl-SAVE-ERROR  report.synctex(busy)  report.tex
docs/: architecture.md  fiche_simulation.docx  fonctionnalités.md  presentation_script.md  review.md
rapport/: presentation_script.md  rapport.tex
refactor/: app.py
refactor/config/: cone.toml  mcu.toml  membrane.toml  theme.py
refactor/ml/: models.py  predict.py
refactor/physics/: cone.py  membrane.py
refactor/scripts/: generate_data.py
refactor/ui/: base_sim_widget.py  cone_widget.py  controls.py  marker_popup.py  mcu_widget.py
results/: compare.csv  demo_lr_direct.csv  demo_mlp_direct.csv  features.csv  integrators.csv  linear.csv  metrics.csv  ml_error.csv  mlp.csv  physics_levels.csv
results/MSE/: resultsConique.csv  resultsLaplace R_C.csv  resultsLaplace.csv  tracking_data.csv
scripts/: find_unused_code.py  generate_synthetic_data.py  test_memory_usage.py  train_ml_models.py  verify_trajectories.py  visualize_trajectories.py
src/: __init__.py  app.py  constantes.py  drap.py  integration_lagrangienne.py  main.py  simulation.py
src/app/: __init__.py  app.py
src/application/: __init__.py  app.py
src/config/: common.toml  cone.toml  loader.py  mcu.toml  membrane.toml  ml.toml  theme.py
src/content/: __init__.py  chapters.py  cone.py  mcu.py  membrane.py  ml.py  simulations.py
src/core/: geometry.py  sim_keys.py
src/data/: synthetic_data.csv  tracking_data.csv  trained_models.pkl
src/gui/: README.md  app.py
src/gui_Qt/: main.py
src/ml/: README.md  direct_models.py  models.py  predict.py  train.py  train_direct.py
src/ml_migration/: mlp.py
src/model/: __init__.py
src/physic_models/: MSE.py  integrators.py  physics.py  run.py  simulations.py  surfaces.py
src/physics/: README.md  cone.py  mcu.py  membrane.py  params.py
src/scripts/: README.md  ablation_features.py  analyze_ml_error.py  benchmark_direct.py  benchmark_integrators.py  benchmark_linear.py  benchmark_migration_models.py  benchmark_migration_models2.py  benchmark_mlp.py  benchmark_physics_levels.py  collect_metrics.py  comp_modeles_ML.py  compare_approaches.py  demo_mlp_direct.py  demo_regression_lineaire.py  generate_data.py  test_data_distribution.py  test_ml_models.py  test_real_training.py  test_simulations.py  test_synth_training.py  train_direct_models.py  train_models.py
src/simu_newtonienne/: bille.py  (+5 more)
(+269 files in other folders)
