[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation-trajectoire"
version = "2.0.0"
requires-python = ">=3.11"

dependencies = [
    "PySide6>=6.6.0",
    "pyqtgraph>=0.13.4",
    "PyOpenGL>=3.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "black>=24.0",
    "flake8>=7.0",
    "pytest>=8.0",
]

[project.scripts]
generate-data = "scripts.generate_data:main"
train-models  = "scripts.train_models:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
